# conan_qt6_kddw

./: CMakeLists.txt  README.md  conanfile.py  pr_vs2019_release
kddockwidgets_conan/: conanfile.py
src/: main.cpp
